@@ -1,8 +1,11 @@
 package org.example.mvc.servlet;
 
+import org.example.mvc.ControllerHandlerAdapter;
 import org.example.mvc.HandlerKey;
+import org.example.mvc.SimpleHandlerAdapter;
 import org.example.mvc.annotation.RequestMethod;
 import org.example.mvc.controller.RootController;
+import org.example.mvc.view.ModelAndView;
 import org.example.mvc.view.SimpleViewResolver;
 import org.example.mvc.view.View;
 import org.slf4j.Logger;
@@ -16,16 +19,19 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
+import java.util.List;
 
 @WebServlet("/")
 public class SimpleDispatcherServlet extends HttpServlet {
     private static final Logger log = LoggerFactory.getLogger(SimpleDispatcherServlet.class);
     private SimpleHandlerMapping requestMappingHandler;
+    private List<SimpleHandlerAdapter> simpleHandlerAdapters;
 
     @Override
     public void init() throws ServletException {
         this.requestMappingHandler = new SimpleHandlerMapping();
         requestMappingHandler.init();
+        simpleHandlerAdapters = List.of(new ControllerHandlerAdapter());
     }
 
     @Override
@@ -39,17 +45,19 @@ public class SimpleDispatcherServlet extends HttpServlet {
             return;
         }
 
+        SimpleHandlerAdapter handlerAdapter = simpleHandlerAdapters.stream()
+                .filter(simpleHandlerAdapter -> simpleHandlerAdapter.isSupport(controller))
+                .findFirst()
+                .orElseThrow(() -> new ServletException("No adapter for handler[" + controller + "]"));
+
         log.info("find {}", controller.getName());
 
         try {
-            Constructor<?> constructor = controller.getConstructor();
-            RootController rootController = (RootController) constructor.newInstance();
-            Method method = controller.getMethod("handleMapping", HttpServletRequest.class, HttpServletResponse.class);
-            String path = (String) method.invoke(rootController, req, resp);
+            ModelAndView modelAndView = handlerAdapter.handleAdapter(req, resp, controller.getConstructor().newInstance());
 
-            log.info("path : {}", path);
+            log.info("path : {}", modelAndView.getViewName());
 
-            View view = SimpleViewResolver.resolveview(path);
+            View view = SimpleViewResolver.resolveview(modelAndView.getViewName());
             view.render(req, resp);
 
         } catch (Exception e) {
